-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.3.0
-
None
-
Win7x64
When open Tools->Options and click Android on the left side(or,when the options dialog default to the Android tab and we open the Option dialog),Qt Creator seems to be executing something on the UI thread and the UI lock up(not responding) for about 5 seconds.
And because for now there are some bugs about Android Kits settings so we often need to open the Android setting tab so this is really painful.
For Gerrit Dashboard: QTCREATORBUG-13735 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
103185,2 | Android: Reduce time to open settings widget | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |