Android: Reduce time to open settings widget

Two major areas of improvement:
- Make connections last, so that the initial setup does not trigger any
  unnecessary checks.
- Make fetching the list of android virtual devices a background
  operation.

Together they reduce the time needed to open the settings for me by
roughly 10 times.

Task-number: QTCREATORBUG-13735
Change-Id: I0839853dcdbdfe20a183a27888e55d3c56a9b815
Reviewed-by: BogDan Vatra <bogdan@kde.org>